

===========================================================================
MARK: released gwenhywfar-1.7.0 (2005/01/26)
===========================================================================


2005/01/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- decreased verbosity


2005/01/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_IPCManager_CheckConnection()
- added NetTransport flag GWEN_NETTRANSPORT_FLAGS_RESTARTABLE which is
  used by IPC code to restart a connection if it is down
- GWEN_IPCManager_Disconnect() now does clean up an IPC node
- added function GWEN_RingBuffer_Reset()
- added function GWEN_NetTransport_AddFlags()
- added function GWEN_NetTransport_SubFlags()


2005/01/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added missing translations
- decreased verbosity of IPC code


===========================================================================
MARK: released gwenhywfar-1.6.0 (2005/01/22)
===========================================================================


2005/01/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed some bugs in network code
- added some fields to certificate DB to make it more informative
- fixed a bug: SSL code was not storing the SSL certificate


2005/01/19: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added GWEN_NetTransportSSL_SetAskAddCertFn2() which allows setting a
  callback function which takes a user data pointer.
- fixed a bug which caused HTTP connections not to return the last message
  received
- now the HTTP protocol version plus the HTTP header "connection:" is
  inspected to find out whether a connection is to be auto-terminated after
  a message has been received


===========================================================================